Fix a footer layout issue and slightly re-work for smaller phones

--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -10,14 +10,14 @@
 
 html {
   background-color: var(--background-color);
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 /* Site Styles */
 body {
   font-family: Poppins, -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif !important;
   font-weight: 400;
-  width: 100%;
-  overflow-x: hidden;
   background-color: var(--background-color);
   color: var(--text-color);
 }
